# PTM-platform

./: .env.example  .gitignore  Makefile  docker-compose.yml  test_enrichment_fixes.py
api-server/: Dockerfile  pyproject.toml
api-server/app/: config.py  dependencies.py  main.py
api-server/app/api/: articles.py  events.py  health.py  llm.py  orders.py  rag.py  system.py
api-server/app/core/: database.py  logging.py  redis.py  security.py
api-server/app/models/: __init__.py  llm_model.py  order.py  rag_collection.py  report.py  user.py
docs/: 01-architecture.md  02-build-and-run.md  03-configuration.md  04-api-reference.md  05-pipeline-guide.md  ANALYSIS_FOCUS_REPORT_USAGE.md  BUILD_AND_RUN.md  PTM_Platform_Tech_Stack.docx  PUBMED_AND_API_KEYS_REVIEW.md  RAG_REPORT_ANALYSIS.md  VECTOR_2D_PLOT_REVIEW.md  generate_tech_stack_docx.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalysisOptionsModal.tsx  FilePreviewModal.tsx  RerunOptionsModal.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/hooks/: useSSE.ts
gateway/: nginx.conf
mcp-server/: Dockerfile  pyproject.toml
mcp-server/app/: main.py
mcp-server/app/tools/: __init__.py  expression.py  interpro.py  iptmnet.py  kea3.py  kegg.py  pmc.py  pubmed.py  stringdb.py  uniprot.py
scripts/: init-db.sql  migrate_article_cache.py
workers/: Dockerfile  celery_app.py  pyproject.toml
workers/common/: collection_selector.py  db_update.py  document_indexer.py  llm_client.py  local_data_loader.py  markdown_to_docx.py  mcp_client.py  progress.py  report_config.py  report_postprocessor.py  section_chunker.py  species_detector.py
workers/preprocessing/: tasks.py
workers/preprocessing/core/: __init__.py  biological_enricher.py  config.py  enhanced_motif_analyzer_v2.py  ptm_quantification.py  ptm_vector_report_generator.py  unified_enricher.py
workers/rag_enrichment/: tasks.py
workers/rag_enrichment/core/: __init__.py  abstract_analyzer.py  cross_site_ptm_search.py  enrichment_pipeline.py  fulltext_analyzer.py  llm_functional_impact.py  llm_kinase_predictor.py  ptm_validation.py  ptm_vector_analysis.py  regulation_extractor.py  report_generator.py
workers/report_generation/: tasks.py
workers/report_generation/core/: __init__.py  citation_formatter.py  drug_repositioning.py  dynamic_prompt_generator.py  graph.py  rag_retriever.py
workers/report_generation/core/nodes/: context_loader.py  drug_repositioning_node.py  editor_node.py  hypothesis_node.py  network_node.py  qa_report_node.py  question_generator.py  research_node.py  validation_node.py  writer_node.py
(+25 files in other folders)
