[project]
name = "ptm-workers"
version = "0.1.0"
description = "PTM Analysis Platform - Celery Workers"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.9",
    "pymysql>=1.1.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "biopython>=1.79",
    "scipy>=1.9.0",
    "openpyxl>=3.0.0",
    "requests>=2.31.0",
    "tqdm>=4.64.0",
    "lxml>=4.9.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "py4cytoscape>=1.9.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "preprocessing", "rag_enrichment", "report_generation"]
